# dupfind

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml
.github/workflows/: ci.yml  release.yml
bench/: run.sh
scripts/: release.sh
src/: args.rs  hasher.rs  main.rs  output.rs  scanner.rs  statistics.rs  utils.rs
