[package]
name = "dupfind"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
blake3 = "1.8.2"
clap = { version = "4.5.53", features = ["derive"] }
env_logger = "0.11.8"
humansize = "2.1.3"
log = "0.4.29"
rayon = "1.10"
walkdir = "2.5.0"
indicatif = "0.17"
ctrlc = "3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2"
supports-hyperlinks = "3.2.0"

[dev-dependencies]
tempfile = "3.10.1"
